fix bug on connected overlapping while dragging range visual change - use line for marks

--- a/components/multi-range-slider/style/index.less
+++ b/components/multi-range-slider/style/index.less
@@ -167,6 +167,9 @@
   &-dot-line-dot {
     border: 1px solid @slider-dot-border-color-active;
     margin-left: -1px;
+    display: inline-block;
+    height: 20px;
+    width: 1px;
   }
 
   &-disabled {
@@ -255,9 +258,10 @@
     }
 
     .@{multi-range-slider-prefix-cls}-dot-line-dot {
-      margin-left: 4px;
+      margin-left: 1px;
       position: absolute;
-      width: 12px;
+      width: 19px;
+      height: 1px;
       margin-top: -1px;
     }
 
